--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -2,17 +2,8 @@
 
 server:
 
-  #
-  # A list of services that a server has
-  #
-  services:
-      
-      # name of the service
-    - name: casual.example.echo
-      
-      # name of the function the service should bind to
-      function: casual_example_echo
-      
+  default:
+    server:
       # transation characteristics
       # Can be one of the following
       # - auto : if a transaction is present join it, else start a new one (default)
@@ -21,13 +12,25 @@ server:
       # - atomic : start a new transaction regardless.
       #
       transaction: join
+  #
+  # A list of services that a server has
+  #
+  services:
+      
+      # name of the service
+    - name: casual.example.echo
+      # name of the function the service should bind to
+      function: casual_example_echo
+      category: example
       
 
     - name: casual.example.sink
       function: casual_example_sink
       transaction: join
+      category: example
 
       
     - name: casual.example.rollback
       function: casual_example_rollback
       transaction: join
+      category: example
