resolves #90 and #91 persistent state
We store current state persistent on shutdown (if not the user has explicitly said not to do so).
The format is a representation of casual internal state, and is 'very' different from
the configuration format.

--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -46,7 +46,7 @@ lib_configuration = LinkLibrary( 'bin/casual-configuration',
 intall_libs.append( lib_configuration)
 
 
-example_archive = LinkArchive( 'bin/casual-example', 
+example_archive = LinkArchive( 'bin/casual-configuration-example', 
      [
          Compile( 'source/example/domain.cpp'),
          Compile( 'source/example/resource/property.cpp'),
