issue #90 server.restrictions was not implemented

--- a/middleware/configuration/example/domain/domain.ini
+++ b/middleware/configuration/example/domain/domain.ini
@@ -21,9 +21,10 @@ instances=1
 
 [domain.default.server]
 instances=1
+restart=true
 
 [domain.default.service]
-timeout=0s
+timeout=90s
 
 [domain.executables]
 arguments=--configuration
@@ -152,16 +153,16 @@ instances=10
 memberships=sales-group
 note=the only services that will be advertised are 'preSalesSaveService' and 'preSalesGetService'
 path=sales-server
-restriction=preSalesSaveService
-restriction=preSalesGetService
+restrictions=preSalesSaveService
+restrictions=preSalesGetService
 
 [domain.servers]
 alias=sales-post
 memberships=sales-group
 note=the only services that will be advertised are 'postSalesSaveService' and 'postSalesGetService'
 path=sales-server
-restriction=postSalesSaveService
-restriction=postSalesGetService
+restrictions=postSalesSaveService
+restrictions=postSalesGetService
 
 [domain.servers]
 memberships=sales-group
@@ -175,6 +176,8 @@ key=SALES_BROKER_VARIABLE
 value=556
 
 [domain.services]
+alias=postSalesSaveService
+alias=sales/post/save
 name=postSalesSaveService
 timeout=2h
 
