resolves #94 service routes.

--- a/middleware/configuration/example/domain/domain.ini
+++ b/middleware/configuration/example/domain/domain.ini
@@ -176,9 +176,9 @@ key=SALES_BROKER_VARIABLE
 value=556
 
 [domain.services]
-alias=postSalesSaveService
-alias=sales/post/save
 name=postSalesSaveService
+routes=postSalesSaveService
+routes=sales/post/save
 timeout=2h
 
 [domain.services]
