For dependency reason libcasual-unittest.so need to be installed

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -126,6 +126,8 @@ target_unittest = LinkLibrary( 'bin/casual-unittest',
      ],
      [ common, "gtest"])
 
+install_libs.append( target_unittest)
+
 #
 # Mockup stuff, only for unittest
 #
