--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -49,6 +49,8 @@ casual_common_objectfiles = [
     Compile( 'source/service/call/context.cpp'),
     Compile( 'source/service/call/state.cpp'),
     Compile( 'source/service/conversation/context.cpp'),
+    Compile( 'source/service/conversation/state.cpp'),
+    
     Compile( 'source/service/lookup.cpp'),
     Compile( 'source/service/header.cpp'),
     Compile( 'source/service/type.cpp'),
