Fix unittest for a 'real' domain - we wait for booted (via events)

--- a/middleware/test/makefile.cmk
+++ b/middleware/test/makefile.cmk
@@ -121,6 +121,7 @@ LinkUnittest( 'unittest/bin/test-casual-generation-isolated',
 		'casual-xatmi', 
 		'yaml-cpp', 
 		'casual-mockup',
+		'casual-unittest',
 	])
 	
 	
