updated some bugs in example documentation

--- a/middleware/example/domain/multiple/medium/domainA/domain.env
+++ b/middleware/example/domain/multiple/medium/domainA/domain.env
@@ -9,7 +9,7 @@
 # With this we can set the following
 #
 export PATH=$CASUAL_HOME/bin:$PATH
-export LD_LIBRARY_PATH=$CASUAL_HOME/bin:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=$CASUAL_HOME/lib:$LD_LIBRARY_PATH
 
 #
 # CASUAL_DOMAIN_HOME - this domain
