--- a/middleware/example/makefile.cmk
+++ b/middleware/example/makefile.cmk
@@ -59,7 +59,7 @@ Install( [ 'domain/multiple/minimal/domain2/configuration/domain.yaml'],'$(CASUA
 
 # multi domian medium example
 Install( [ 'domain/multiple/medium/readme.md'],'$(CASUAL_HOME)/example/domain/multiple/medium')
-Install( [ 'domain/multiple/medium/diagram/scenario.png', 'domain/multiple/medium/diagram/scenario.uml'],'$(CASUAL_HOME)/example/domain/multiple/medium/diagram')
+Install( [ 'domain/multiple/medium/diagram/scenario.svg', 'domain/multiple/medium/diagram/scenario.uml'],'$(CASUAL_HOME)/example/domain/multiple/medium/diagram')
 
 Install( [ 'domain/multiple/medium/domainA/domain.env'],'$(CASUAL_HOME)/example/domain/multiple/medium/domainA')
 Install( [ 'domain/multiple/medium/domainA/configuration/domain.yaml'],'$(CASUAL_HOME)/example/domain/multiple/medium/domainA/configuration')
