refactoring - service invocation in a more c++ way
A start for a 'layer' under/before XATMI that the user can use directly
and eliminate the 'hassle' of the XATMI C-API and dispatch, if one
wants.

I'll continue to explore this, and 'convert' our own server/managers to
see if it feels good.

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -57,6 +57,7 @@ casual_common_objectfiles = [
     Compile( 'source/service/lookup.cpp'),
     Compile( 'source/service/header.cpp'),
     Compile( 'source/service/type.cpp'),
+    Compile( 'source/service/invoke.cpp'),
     
     Compile( 'source/buffer/x_octet.cpp'),
     Compile( 'source/buffer/pool.cpp'),
