some major refactoring to enable a c++ entry layer before XATMI
...for user code, if one wants...

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -45,6 +45,7 @@ casual_common_objectfiles = [
     Compile( 'source/server/lifetime.cpp'),
     Compile( 'source/server/service.cpp'),
     Compile( 'source/server/argument.cpp'),
+    Compile( 'source/server/start.cpp'),
     Compile( 'source/server/handle/service.cpp'),
     Compile( 'source/server/handle/conversation.cpp'),
     Compile( 'source/server/handle/policy.cpp'),
