--- a/middleware/test/makefile.cmk
+++ b/middleware/test/makefile.cmk
@@ -30,21 +30,6 @@ archive_proxy = LinkArchive( 'bin/sftestproxy',
 
 
 
-target = LinkServer( 'bin/test',
-	[ Compile( 'source/template_server.cpp', 'obj/template_server.o')],
-	[ 
-		'casual-xatmi', 
-		'casual-common', 
-		'casual-sf',
-		'casual-queue-api'
-	],
-	'source/template_server.yaml',
-	['rm-mockup'],
-	'../configuration/resources.yaml')
-
-install_bin.append( target)
-
-
 
 #
 # Compile and link VO:n
@@ -56,29 +41,6 @@ archive_vo = LinkArchive( 'bin/sf-test-vo',
 	])
 
 
-#
-# compile and link the sf-template-server
-#
-
-
-target = LinkServer('bin/sf_test',
-    [
-	   Compile( 'source/template_sf_server.cpp', 'obj/template_sf_server.o'),
-	   Compile( 'source/template_sf_server_implementation.cpp', 'obj/template_sf_server_implementation.o'),
-    ],
-    [
-	archive_vo,
-    'casual-xatmi',
-    'casual-common',
-    'casual-sf'
-    ],
-	[
-    'casual_sf_test1',
-    'casual_sf_test2'
-    ])
-
-install_bin.append( target)
-	
 
 
 target = LinkExecutable( 'bin/test_client',
@@ -99,14 +61,6 @@ target = LinkExecutable( 'bin/test_multicall_client',
 install_bin.append( target)
 
 
-target = LinkExecutable( 'bin/test_proxycall_client',
-	[ 
-		Compile( 'source/test_proxycall.cpp')
-    ], 
-	['casual-sf', archive_proxy, 'casual-xatmi'])
-	
-install_bin.append( target)
-#
 # unittest
 #
 
@@ -130,17 +84,16 @@ LinkUnittest( 'unittest/bin/test-casual-generation-isolated',
 #
 
 
-LinkServer('bin/sf-detoct-test-server',
+LinkExecutable('bin/casual-sf-test-server',
     [ 
 	   Compile( 'source/sf_testserverserver.cpp'),
-	   Compile( 'source/sf_testserverimplementation.cpp'),
 	],
     [
 	  archive_vo,
      'casual-sf',
+     'casual-common', 
      'casual-xatmi'
-    ],
-    ['casual_sf_test1','casual_sf_test2'])
+    ])
 
 #
 # Install
