--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -38,6 +38,7 @@ LibraryPaths( [ 'bin'] + platform_specific_lib_paths + [ '$(CASUAL_OPTIONAL_LIBR
 
 
 install_libs = []
+install_headers = []
 
 
 casual_common_objectfiles = [
@@ -115,8 +116,6 @@ casual_common_objectfiles = [
     
     Compile( 'source/arguments.cpp'),
     Compile( 'source/terminal.cpp'),
-
-    
 ]
 
 
@@ -126,6 +125,14 @@ common = LinkLibrary( 'bin/casual-common',
 
 install_libs.append( common)
 
+
+install_headers += [ 
+      ( 'include/common/log.h', 'common'),
+      ( 'include/common/traits.h', 'common'),
+      ( 'include/common/log/stream.h', 'common/log'),
+      ( 'include/common/log/trace.h', 'common/log'),
+      ( 'include/common/log/category.h', 'common/log')
+]
 
 
 #
@@ -267,6 +274,7 @@ Dependencies( target_test_common, [ target_simple_process ]);
 # Install 
 #
 Install( install_libs, '$(CASUAL_HOME)/lib')
+Install( install_headers, '$(CASUAL_HOME)/include')
 
 
 
