issue #105 export sdk headers
We need to set up some sort of build to verify thing like thias

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -128,6 +128,7 @@ install_libs.append( common)
 
 install_headers += [ 
       ( 'include/common/log.h', 'common'),
+      ( 'include/common/platform.h', 'common'),
       ( 'include/common/traits.h', 'common'),
       ( 'include/common/log/stream.h', 'common/log'),
       ( 'include/common/log/trace.h', 'common/log'),
