--- a/middleware/configuration/example/domain/domain.ini
+++ b/middleware/configuration/example/domain/domain.ini
@@ -58,13 +58,33 @@ restart=false
 restart=true
 type=tcp
 
+[domain.gateway.default.listener]
+
 [domain.gateway.listeners]
 address=localhost:7779
-note=local host
+note=local host - if threshold of 2MB of total payload 'in flight' is reach inbound will stop consume from socket until we're below
+
+[domain.gateway.listeners.limit]
+size=2097152
 
 [domain.gateway.listeners]
 address=some.host.org:7779
-note=another listener that is bound to some 'external ip'
+note=listener that is bound to some 'external ip' - limit to max 200 calls 'in flight'
+
+[domain.gateway.listeners.limit]
+messages=200
+
+[domain.gateway.listeners]
+address=some.host.org:9999
+note=listener - threshold of either 10 messages OR 10MB - the first that is reach, inbound will stop consume
+
+[domain.gateway.listeners.limit]
+messages=10
+size=10485760
+
+[domain.gateway.listeners]
+address=some.host.org:4242
+note=listener - no limits
 
 [domain.groups]
 name=common-group
