--- a/middleware/configuration/example/domain/domain.yaml
+++ b/middleware/configuration/example/domain/domain.yaml
@@ -1,3 +1,4 @@
+---
 domain:
   name: domain.A42
   default:
@@ -154,17 +155,36 @@ domain:
 
   gateway:
     default:
+      listener:
+        {}
+
       connection:
         type: tcp
         restart: true
 
 
     listeners:
-      - address: localhost:7779
-        note: local host
+      - limit:
+          size: 2097152
 
-      - address: some.host.org:7779
-        note: another listener that is bound to some 'external ip'
+        address: localhost:7779
+        note: local host - if threshold of 2MB of total payload 'in flight' is reach inbound will stop consume from socket until we're below
+
+      - limit:
+          messages: 200
+
+        address: some.host.org:7779
+        note: listener that is bound to some 'external ip' - limit to max 200 calls 'in flight'
+
+      - limit:
+          size: 10485760
+          messages: 10
+
+        address: some.host.org:9999
+        note: listener - threshold of either 10 messages OR 10MB - the first that is reach, inbound will stop consume
+
+      - address: some.host.org:4242
+        note: listener - no limits
 
 
     connections:
